--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,11 +2,11 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css')
+    link(rel='stylesheet', href='https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css')
     link(rel='stylesheet', href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js')
     script(src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js')
-    script(src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js')
+    script(src='https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js')
   body
     block content
